@@ -91,7 +91,63 @@ double dbmtov(double a)
     return pow(10, (a-13.0)/20);
 }
 
-#ifdef TESTMAIN
+/* Set *freq to frequency in Hz.
+ * Return 0 on success, -1 on failure.
+ */
+int
+freqstr(char *str, double *freq)
+{
+    char *end;
+    double f = strtod(str, &end);
+    int result = 0;
+
+    if (!*end)  /* no units is an error */
+        result = -1;
+    else if (!strcasecmp(end, "hz"))
+        ;
+    else if (!strcasecmp(end, "khz"))
+        f *= 1E3;
+    else if (!strcasecmp(end, "mhz"))
+        f *= 1E6;
+    else if (!strcasecmp(end, "ghz"))
+        f *= 1E9;
+    else if (!strcasecmp(end, "sec") || !strcasecmp(end, "s"))
+        f = 1.0/f;
+    else if (!strcasecmp(end, "msec") || !strcasecmp(end, "ms"))
+        f = 1E3/f;
+    else if (!strcasecmp(end, "usec") || !strcasecmp(end, "us"))
+        f = 1E6/f;
+    else if (!strcasecmp(end, "nsec") || !strcasecmp(end, "ns"))
+        f = 1E9/f;
+    else if (!strcasecmp(end, "psec") || !strcasecmp(end, "ps"))
+        f = 1E12/f;
+    else  
+        result = -1;
+
+    if (result == 0 && freq != NULL)
+        *freq = f;
+
+    return result;
+}
+
+#ifdef FREQMAIN
+int
+main(int argc, char *argv[])
+{
+    int i;
+    double f;
+
+    for (i = 1; i < argc; i++) {
+        if (freqstr(argv[i], &f) < 0)
+            printf("error\n");
+        else
+            printf("%s = %e hz\n", argv[i], f);
+    }
+    exit(0);
+}
+#endif
+
+#ifdef AMPLMAIN
 int
 main(int argc, char *argv[])
 {
